Enhance the microservice by integrating an API Gateway and caching.